<resources>
    <string name="app_name">Geagonia_MyApplication</string>
    <string name="Act_1">Activity 1</string>
    <string name="Act_2">Activity 2</string>
    <string name="Act_3">Activity 3</string>
    <string name="Act_4">Activity 4</string>
    <string name="Act_5">Activity 5</string>
    <string name="Act_6">Activity 6</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="Label">This page displays the input from the Registration</string>
    <string name="OK">OK</string>
    <string name="Empty">_</string>
</resources>