<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/amebg"
    >

    <Button
        android:id="@+id/bt_Activity1"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="@color/caramel"
        android:fontFamily="monospace"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/Act_1"
        android:textAlignment="center"
        android:textColor="@color/amebg"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSP"
        />

    <Button
        android:id="@+id/bt_Activity4"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="@color/caramel"
        android:fontFamily="monospace"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/Act_4"
        android:textAlignment="center"
        android:textColor="@color/amebg"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSP"
        />

    <Button
        android:id="@+id/bt_Activity3"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="@color/caramel"
        android:fontFamily="monospace"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/Act_3"
        android:textAlignment="center"
        android:textColor="@color/amebg"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSP"
        />

    <Button
        android:id="@+id/bt_Activity2"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="@color/caramel"
        android:fontFamily="monospace"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/Act_2"
        android:textAlignment="center"
        android:textColor="@color/amebg"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSP"
        />

    <Button
        android:id="@+id/bt_Activity5"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="@color/caramel"
        android:fontFamily="monospace"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/Act_5"
        android:textAlignment="center"
        android:textColor="@color/amebg"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSP" />

    <Button
        android:id="@+id/bt_Activity6"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="@color/caramel"
        android:fontFamily="monospace"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/Act_6"
        android:textAlignment="center"
        android:textColor="@color/amebg"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSP" />

</androidx.constraintlayout.widget.ConstraintLayout>